--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "shadow-cljs": "^2.11.5"
   },
   "dependencies": {
+    "highlight.js": "9.18.1",
     "react": "16.13.0",
-    "react-dom": "16.13.0"
+    "react-dom": "16.13.0",
+    "react-highlight.js": "1.0.7"
   }
 }
