--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "compile": "shadow-cljs compile dapp",
     "release": "shadow-cljs release dapp",
     "html": "mkdir -p target && cp assets/* target/",
+    "watch-assets": "onchange -i 'assets/*' -- yarn html",
     "serve": "yarn html && http-server target/",
     "del": "rm -r target/*",
     "deploy": "yarn html && yarn release",
-    "build": "yarn del && yarn release && yarn html && yarn serve"
+    "build": "yarn del && yarn release && yarn serve"
   },
   "author": "em-ak",
   "license": "WTFPL",
   "devDependencies": {
     "http-server": "^0.12.3",
+    "onchange": "^7.0.2",
     "shadow-cljs": "^2.11.5"
   },
   "dependencies": {
